--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 180px;
+    padding: 0 180px 64px 180px;
 }
 .info h2 {
     margin: 42px 0;
@@ -111,4 +111,19 @@ a {
 .card p{
     text-align: center;
     margin-top: 8px;
+}
+.quote {
+    background-color: #e5e7eb;
+    padding: 64px 300px;
+}
+.quote .quote-text {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+    color: #1f2937;
+}
+.quote .quote-author {
+    text-align: end;
+    padding: 0 36px;
+    font-weight: bold;
 }
